# compiler

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Frontend/: DFA.hpp  Keywords.hpp  Parser.hpp  SYNTAX_ANALYZER.hpp  Scanner.hpp  Token.hpp
Frontend/401130253/: desktop.ini  تحلیلگر لغوی.cpp  تحلیلگر نحوی.cpp  کد نهایی با رفع ابهام و خطایابی.cpp
